--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@ title: Manush Bhatt
   <title>{{ page.title }}</title>
 </head>
 <body>
+	I am in my <strong>second</strong> year of Masters in Computer Science from <strong>Purdue
+	University</strong>. My research interests lie in deep generative modeling
 </body>
 </html>
