--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- Logo -->
         <div id="logo">
-            <span class="image avatar48"><img src="images/me.jpg" alt=""/></span>
+            <span class="image avatar48"><img style="border-radius: 50%" src="images/me.jpg" alt=""/></span>
             <h1 id="title">Manush Bhatt</h1>
             <p>Graduate Student</p>
         </div>
@@ -33,7 +33,8 @@
                 <li><a href="#publications" id="publications-link"><span class="icon solid fa-book">Publications</span></a>
                 </li>
                 <li><a href="#projects" id="projects-link"><span class="icon solid fa-tasks">Projects</span></a></li>
-                <li><a href="#research-exp" id="research-link"><span class="icon solid fa-university">Research Experience</span></a></li>
+                <li><a href="#research-exp" id="research-link"><span class="icon solid fa-university">Research Experience</span></a>
+                </li>
                 <li><a href="#work-exp" id="work-link"><span
                         class="icon solid fa-industry">Industry Experience</span></a></li>
             </ul>
@@ -45,9 +46,10 @@
 
         <!-- Social Icons -->
         <ul class="icons">
-            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+            <li><a href="https://github.com/manushb" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a>
+            </li>
+            <li><a href="mailto:bhatt16@purdue.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a>
+            </li>
         </ul>
 
     </div>
@@ -61,8 +63,8 @@
     <section id="top" class="one dark cover">
         <div class="container">
             <header>
-                I am in my second year of Masters in Computer Science from Purdue University.
-                My research interests lie in deep generative modeling.
+                I am a Computer Science graduate student at Purdue University. My research interests are in applying
+                machine learning and computer vision for efficient image synthesis.
             </header>
         </div>
     </section>
@@ -103,7 +105,8 @@
                         [<a href="https://dl.acm.org/doi/abs/10.1145/3311790.3396670">Published</a>]
                         [<a href="https://github.com/ManushB/photo2bldg">Code</a>]
                         [<a href="http://photo2building.com/">Web-App</a>] <br>
-                        <b>M. Bhatt<b>, R. Kalyanam, G. Nishida, L. He, C.K. May, D. Niyogi and D.G. Aliaga</li>
+                        <b>M. Bhatt</b>, R. Kalyanam, G. Nishida, L. He, C.K. May, D. Niyogi and D.G. Aliaga
+                    </li>
                 </ul>
             </div>
         </div>
@@ -212,14 +215,8 @@
                         <img src="images/Lavelle_Logo.png" style="float: left;width: 330px; height: 180px;" alt="">
                     </div>
                     <div class="content">
-                        <h3 class="heading2" style="letter-spacing: -2.8px">
+                        <h4 class="heading2" style="letter-spacing: -2.8px">
                             Senior Software Developer [Oct'17 - Dec'18]
-                        </h3>
-                        <h3 class="heading2" style="letter-spacing: -2.8px">
-                            Software Developer [Jun'16 - Oct'17]
-                        </h3>
-                        <h3 class="heading2" style="letter-spacing: -2.8px">Software Developer Intern [Aug '15 - May '16]</h3>
-                        <h4 style="padding: 0px;text-align: justify">
                         </h4>
                     </div>
                 </div>
@@ -228,9 +225,9 @@
                         <img src="images/Purdue_Logo.png" style="float: left;width: 330px; height: 180px;" alt="">
                     </div>
                     <div class="content">
-                        <h3 class="heading2" style="letter-spacing: -2.8px">
-                            Graduate Teaching Assistant [Aug'20 - Present]
-                        </h3>
+                        <h4 class="heading2" style="letter-spacing: -2.8px">
+                            Teaching Assistant [Aug'20 - Present]
+                        </h4>
                         <h4 style="padding: 0px;text-align: justify">
                             CS 180: Problem Solving And Object-Oriented Programming
                         </h4>
