--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     <!-- Intro -->
     <section id="top" class="one dark cover">
         <div class="container">
+            <header></header>
+        </div>
+    </section>
+
+    <section id="intro" class="two">
+        <div class="container">
             <header>
                 I am a Computer Science graduate student at Purdue University. My research interests are in applying
                 machine learning and computer vision for efficient image synthesis.
@@ -178,7 +184,7 @@
             <div class="inner alt">
                 <div class="spotlight">
                     <div class="image">
-                        <img src="images/Purdue_Logo.png" style="float: left;width: 330px; height: 180px;" alt="">
+                        <img src="images/P2B_2.png" style="height: 500px;width: 180px" alt="">
                     </div>
                     <div class="content">
                         <h3 class="heading2">
@@ -187,12 +193,12 @@
                         <h4 style="padding: 0px;text-align: justify">
                             Procedural Modeling has been used to create 3D models and textures from a set of grammars.
                             The tool Photo2Building procedurally generates a 3D geometry of the building given a
-                            photograph. My work focused on using cloud infrastructures to make the tool scalable and
-                            publicly available for the urban modeling community. Designed and developed a client-server
-                            model where the server used pre-trained convolutional neural network(CNN) models to
-                            automatically estimate the building (facade and window) grammars and the client provided an
-                            interactive GUI developed using Jupyter Notebook. Our results showed that the cost of
-                            reconstructing a 3D model of the building came up to just 0.60 USD on Google Cloud
+                            photograph and an input silhouette. Our work focused on using cloud infrastructures to make
+                            the tool scalable and publicly available for the urban modeling community. Our solution
+                            involved developing a client-server architecture where the server used a pre-trained
+                            CNN model to estimate the building (facade and window) grammars and the client provided an
+                            interactive GUI developed using Jupyter Notebook. Our results showed that it costed only
+                            0.60 USD of Google Cloud resources for reconstructing a single 3D building.
                         </h4>
                     </div>
                 </div>
@@ -222,7 +228,7 @@
                 </div>
                 <div class="spotlight">
                     <div class="image">
-                        <img src="images/Purdue_Logo.png" style="float: left;width: 330px; height: 180px;" alt="">
+                        <img src="images/Purdue_CS_Logo.png" style="float: left;border-radius: 50%" alt="">
                     </div>
                     <div class="content">
                         <h4 class="heading2" style="letter-spacing: -2.8px">
