--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-                <li><a href="#news" id="news-link"><span class="icon solid fa-newspaper">News</span></a></li>
-                <li><a href="#publications" id="publications-link"><span class="icon solid fa-book">Publications</span></a>
+                <li><a href="#top" id="top-link"><span class="icon solid fa-home"> Intro</span></a></li>
+                <li><a href="#news" id="news-link"><span class="icon solid fa-newspaper"> News</span></a></li>
+                <li><a href="#publications" id="publications-link"><span class="icon solid fa-book"> Publications</span></a>
                 </li>
-                <li><a href="#projects" id="projects-link"><span class="icon solid fa-tasks">Projects</span></a></li>
-                <li><a href="#research-exp" id="research-link"><span class="icon solid fa-university">Research Experience</span></a>
+                <li><a href="#research-exp" id="research-link"><span class="icon solid fa-university"> Research Experience</span></a>
                 </li>
+                <li><a href="#projects" id="projects-link"><span class="icon solid fa-tasks"> Course Projects</span></a></li>
                 <li><a href="#work-exp" id="work-link"><span
-                        class="icon solid fa-industry">Industry Experience</span></a></li>
+                        class="icon solid fa-industry"> Industry Experience</span></a></li>
             </ul>
         </nav>
 
@@ -69,8 +69,9 @@
     <section id="intro" class="two">
         <div class="container">
             <header>
-                I am a Computer Science graduate student at Purdue University. My research interests are in applying
-                machine learning and computer vision for efficient image synthesis.
+                I am pursuing masters in Computer Science at Purdue University. My research interests lie in applying
+                machine learning and computer vision for efficient image synthesis. I am a member of AAAI, SASE,
+                and SIAM.
             </header>
         </div>
     </section>
@@ -78,11 +79,9 @@
     <!-- News -->
     <section id="news" class="two">
         <div class="container">
-
             <header>
                 <h2 class="heading">News</h2>
             </header>
-
             <div>
                 <ul>
                     <li>[Oct ‘20] Poster Accepted at NeurIPS '20 Beyond BackPropagation Workshop</li>
@@ -105,76 +104,25 @@
 
             <div>
                 <ul>
+                    <li>Learning Flows By Parts, NeurIPS ‘20 Workshop: Beyond BackPropagation: Novel
+                        Ideas for Training Neural Architectures [Accepted] <br>
+                        <h6 class="heading3">M. Bhatt</h6>, and D. Inouye
+                    </li>
                     <li>Design and Deployment of Photo2Building: A Cloud-based Procedural Modeling Tool as a
-                        Service at PEARC ‘20
-                        [<a href="https://arxiv.org/abs/2008.01286">Preprint</a>]
-                        [<a href="https://dl.acm.org/doi/abs/10.1145/3311790.3396670">Published</a>]
-                        [<a href="https://github.com/ManushB/photo2bldg">Code</a>]
-                        [<a href="http://photo2building.com/">Web-App</a>] <br>
-                        <b>M. Bhatt</b>, R. Kalyanam, G. Nishida, L. He, C.K. May, D. Niyogi and D.G. Aliaga
+                        Service, PEARC ‘20
+                        [<a href="https://arxiv.org/abs/2008.01286" target="_blank">Preprint</a>]
+                        [<a href="https://dl.acm.org/doi/abs/10.1145/3311790.3396670" target="_blank">Published</a>]
+                        [<a href="https://github.com/ManushB/photo2bldg" target="_blank">Code</a>]
+                        [<a href="http://photo2building.com/" target="_blank">Web-App</a>] <br>
+                        <h6 class="heading3">M. Bhatt</h6>, R. Kalyanam, G. Nishida, L. He, C.K. May, D. Niyogi and D.G. Aliaga
                     </li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <!-- Projects -->
-    <section id="projects" class="four">
-        <div class="container">
-            <header>
-                <h2 class="heading">Course Projects</h2>
-            </header>
-
-            <div class="inner alt">
-                <div class="spotlight">
-                    <div class="image">
-                        <img src="images/fakenews.png" style="float: left;width: 300px; height: 200px;" alt="">
-
-                    </div>
-                    <div class="content">
-                        <h3 class="heading2">Fake News Detection</h3>
-                        <h4 style="padding: 0px;text-align: justify">
-                            Classified news headlines during the U.S.
-                            Presidential Elections of 2016 into real and fake. A TF-IDF approach was used to generate
-                            lemmatized data. We evaluated our LSTM model against commonly used algorithms available
-                            from scikit-learn and achieved an accuracy of 96%
-                        </h4>
-                    </div>
-                </div>
-                <div class="spotlight">
-                    <div class="image">
-                        <img src="images/rul_prediction.gif" style="width: 300px; height: 250px;" alt="">
-                    </div>
-                    <div class="content">
-                        <h3 class="heading2" style="text-align: left;">Predicting useful life of a Li-Ion battery</h3>
-                        <h4 style="padding: 0px;text-align: justify">
-                            The project involved estimating the remaining useful life(capacity) of a Li-Ion battery
-                            after k number of charge and discharge cycles on a dataset provided by NASA. Relevance
-                            Vector Machine(RVM) with a certain degree of randomness was used to determine the
-                            capacity change
-                        </h4>
-                    </div>
-                </div>
-                <div class="spotlight">
-                    <div class="image">
-                        <img src="images/wave_simulation.gif" style="width: 300px; height: 250px; border-radius: 50%"
-                             alt="">
-                    </div>
-                    <div class="content">
-                        <h3 class="heading2" style="text-align: left;">Gerstner Wave Simulation</h3>
-                        <h4 style="padding: 0px;text-align: justify">
-                            Developed a 3D water simulation tool based on the Gerstner Wave simulation algorithm on the
-                            GPU. The code was developed using OpenGL and FreeGLUT
-                        </h4>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
     <!-- Research Experience -->
-    <section id="research-exp" class="five">
+    <section id="research-exp" class="four">
         <div class="container">
 
             <header>
@@ -188,7 +136,8 @@
                     </div>
                     <div class="content">
                         <h3 class="heading2">
-                            Photo2Building
+                            Scaling Photo2Building <a href="https://arxiv.org/abs/2008.01286" target="_blank">[Paper]</a>
+                            [2019]
                         </h3>
                         <h4 style="padding: 0px;text-align: justify">
                             Procedural Modeling has been used to create 3D models and textures from a set of grammars.
@@ -199,6 +148,107 @@
                             CNN model to estimate the building (facade and window) grammars and the client provided an
                             interactive GUI developed using Jupyter Notebook. Our results showed that it costed only
                             0.60 USD of Google Cloud resources for reconstructing a single 3D building.
+                        </h4>
+                    </div>
+                </div>
+
+                <div class="spotlight">
+                    <div class="image">
+                        <img src="images/Silhouette_detection.JPG" style="height: 300px;width: 300px" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading2">
+                            Silhouette Detection [In-Progress] [2020]
+                        </h3>
+                        <h4 style="text-align: justify">
+                            The main disadvantage of Photo2Building is that it requires a manually labelled contour
+                            as an input. This work focuses on performing an instance segmentation on street-view images
+                            to produce accurate 3D polylines representing the building boundary. Our network uses
+                            an unsupervised training approach. We compare results by training on well-known instance
+                            segmentation models such as <a href="https://arxiv.org/abs/1703.06870" target="_blank">Mask R-CNN</a>,
+                            <a href="https://arxiv.org/abs/1904.02689" target="_blank">YOLACT</a> and
+                            <a href="https://arxiv.org/abs/1903.00241" target="_blank">Mask Scoring R-CNN</a>.
+                        </h4>
+                    </div>
+                </div>
+
+                <div class="spotlight">
+                    <div class="image">
+                        <img src="images/flows.png" style="float: left; height: 330px;width: 330px" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading2">
+                            Learning Generative Normalizing Flows by Parts [In-Progress] [2020]
+                        </h3>
+                        <h4 style="text-align: justify">
+                            State-of-the-art flow based models introduce significant model complexity in deep
+                            neural networks which induces long training times even on high-end GPUs. We focus on
+                            optimizing such models in parts rather than full end-to-end backpropagation
+                            to see if we can achieve similar performance even without end-to-end backpropagation.
+                            Each model part is gradient-isolated to not exchange gradient information with other parts.
+                            We evaluate our results along for training the state-of-the-art
+                            <a href="https://arxiv.org/abs/1807.03039" target="_blank">Glow</a> model via parts where we achieve
+                            comparable accuracy in <div class="heading3">~30% shorter time</div>.
+                        </h4>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="five">
+        <div class="container">
+            <header>
+                <h2 class="heading">Course Projects</h2>
+            </header>
+
+            <div class="inner alt">
+                <div class="spotlight">
+                    <div class="image">
+                        <img src="images/rul_prediction.gif" style="width: 300px; height: 250px;" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading2">Predicting Remaining Useful Life (RUL) of a Li-Ion battery
+                            <a href="files/RUL_final.pdf" target="_blank">[Report]</a>
+                        </h3>
+                        <h4 style="padding: 0px;text-align: justify">
+                            The project involved estimating the remaining useful life (or capacity) of a Li-Ion battery
+                            after k number of charge and discharge cycles on a dataset provided by NASA. We evaluated
+                            various machine learning techniques to generate a user-dependent prediction. Relevance
+                            Vector Machine(RVM) with a certain degree of randomness was used to determine the
+                            capacity change
+                        </h4>
+                    </div>
+                </div>
+                <div class="spotlight">
+                    <div class="image">
+                        <img src="images/fakenews.png" style="width: 300px; height: 200px;" alt="">
+
+                    </div>
+                    <div class="content">
+                        <h3 class="heading2">Fake News Detection
+                            <a href="files/Fake_News.pdf" target="_blank">[Report]</a>
+                        </h3>
+                        <h4 style="padding: 0px;text-align: justify">
+                            Classified news headlines during the U.S.
+                            Presidential Elections of 2016 into real and fake. A TF-IDF approach was used to generate
+                            lemmatized data. We evaluated our LSTM model against commonly used algorithms available
+                            from scikit-learn and achieved an accuracy of 96%
+                        </h4>
+                    </div>
+                </div>
+                <div class="spotlight">
+                    <div class="image">
+                        <img src="images/wave_simulation.gif" style="width: 300px; height: 250px; border-radius: 50%"
+                             alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="heading2">Gerstner Wave Simulation</h3>
+                        <h4 style="padding: 0px;text-align: justify">
+                            Developed a 3D water simulation tool based on the Gerstner Wave simulation algorithm on the
+                            GPU. The code was developed using OpenGL and FreeGLUT
                         </h4>
                     </div>
                 </div>
@@ -218,7 +268,7 @@
             <div class="inner alt">
                 <div class="spotlight">
                     <div class="image">
-                        <img src="images/Lavelle_Logo.png" style="float: left;width: 330px; height: 180px;" alt="">
+                        <img src="images/Lavelle_Logo.png" style="float: left;width: 350px; height: 180px;" alt="">
                     </div>
                     <div class="content">
                         <h4 class="heading2" style="letter-spacing: -2.8px">
@@ -228,7 +278,7 @@
                 </div>
                 <div class="spotlight">
                     <div class="image">
-                        <img src="images/Purdue_CS_Logo.png" style="float: left;border-radius: 50%" alt="">
+                        <img src="images/Purdue_CS_Logo.png" style="border-radius: 50%" alt="">
                     </div>
                     <div class="content">
                         <h4 class="heading2" style="letter-spacing: -2.8px">
@@ -252,7 +302,7 @@
     <!-- Copyright -->
     <ul class="copyright">
         <li>&copy; Manush Bhatt. All rights reserved.</li>
-        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
     </ul>
 
 </div>
