--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div>
                 <ul>
-                    <li>Learning Flows By Parts, NeurIPS ‘20 Workshop: Beyond BackPropagation: Novel
+                    <li>Learning Flows By Parts, NeurIPS ‘20 Workshop on Beyond BackPropagation: Novel
                         Ideas for Training Neural Architectures [Accepted] <br>
                         <h6 class="heading3">M. Bhatt</h6>, and D. Inouye
                     </li>
