--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="intro" class="two">
         <div class="container">
             <header>
-                I am pursuing masters in Computer Science at Purdue University. My research interests lie in applying
+                I am pursuing a Master's degree in Computer Science at Purdue University. My research interests lie in applying
                 machine learning and computer vision for efficient image synthesis. I am a member of AAAI, SASE,
                 and SIAM.
             </header>
@@ -174,7 +174,7 @@
 
                 <div class="spotlight">
                     <div class="image">
-                        <img src="images/flows.png" style="float: left; height: 330px;width: 330px" alt="">
+                        <img src="images/flows.png" style="float: left; height: 310px;width: 330px" alt="">
                     </div>
                     <div class="content">
                         <h3 class="heading2">
