--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             <div>
                 <ul>
                     <li>Learning Flows By Parts, NeurIPS ‘20 Workshop on Beyond BackPropagation: Novel
-                        Ideas for Training Neural Architectures [Accepted] <br>
+                        Ideas for Training Neural Architectures
+                        [<a href="files/Flows_paper.pdf" target="_blank">Paper</a>]
+                        [<a href="files/Flows_poster.pdf" target="_blank">Poster</a>]
+                        <br>
                         <h6 class="heading3">M. Bhatt</h6>, and D. Inouye
                     </li>
                     <li>Design and Deployment of Photo2Building: A Cloud-based Procedural Modeling Tool as a
