Added youtube video link
Signed-off-by: Manush Bhatt <bhattmanush@gmail.com>

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         Ideas for Training Neural Architectures
                         [<a href="files/Flows_paper.pdf" target="_blank">Paper</a>]
                         [<a href="files/Flows_poster.pdf" target="_blank">Poster</a>]
+                        [<a href="https://youtu.be/6fpKtF41_Tc" target="_blank">Video</a>]
                         <br>
                         <h6 class="heading3">M. Bhatt</h6>, and D. Inouye
                     </li>
