--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                 I am pursuing a Master's degree in Computer Science at Purdue University. My research interests lie in applying
                 machine learning and computer vision for efficient image synthesis. I am a member of AAAI, SASE,
                 and SIAM.
+                <br>
+                <b style="color: red">Actively looking for Ph.D. position starting Fall 2021</b>
             </header>
         </div>
     </section>
@@ -84,7 +86,8 @@
             </header>
             <div>
                 <ul>
-                    <li>[Oct ‘20] Poster Accepted at NeurIPS '20 Beyond BackPropagation Workshop</li>
+                    <li>[Feb ‘21] Paper Submitted to ICML '21 for review</li>
+                    <li>[Dec ‘20] Poster Presented at NeurIPS '20 Beyond BackPropagation Workshop</li>
                     <li>[Aug ‘20] Attended Oxford Machine learning Summer School OxML '20</li>
                     <li>[Jul ‘20] Presented and Volunteered at PEARC '20</li>
                     <li>[Jul ‘20] Student Volunteer at ICML '20</li>
@@ -104,6 +107,10 @@
 
             <div>
                 <ul>
+                    <li>Learning Flows Locally [Under Review]
+                        <br>
+                        <h6 class="heading3">M. Bhatt</h6>, and D. Inouye
+                    </li>
                     <li>Learning Flows By Parts, NeurIPS ‘20 Workshop on Beyond BackPropagation: Novel
                         Ideas for Training Neural Architectures
                         [<a href="files/Flows_paper.pdf" target="_blank">Paper</a>]
@@ -182,7 +189,7 @@
                     </div>
                     <div class="content">
                         <h3 class="heading2">
-                            Learning Generative Normalizing Flows by Parts [In-Progress] [2020]
+                            Learning Generative Normalizing Flows by Parts [Under Review] [2020]
                         </h3>
                         <h4 style="text-align: justify">
                             State-of-the-art flow based models introduce significant model complexity in deep
@@ -276,7 +283,7 @@
                     </div>
                     <div class="content">
                         <h4 class="heading2" style="letter-spacing: -2.8px">
-                            Senior Software Developer [Jun'16 - Dec'18]
+                            Senior Software Developer [Oct'17 - Dec'18]
                         </h4>
                     </div>
                 </div>
