Updated active search
Signed-off-by: Manush Bhatt <bhattmanush@gmail.com>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 machine learning and computer vision for efficient image synthesis. I am a member of AAAI, SASE,
                 and SIAM.
                 <br>
-                <b style="color: red">Actively looking for Ph.D. position starting Fall 2021</b>
+                <b style="color: red">Actively looking for full-time opportunities in Deep Learning and Computer Vision</b>
             </header>
         </div>
     </section>
